Copied over since there were issues

--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -18,8 +18,13 @@ The experimental geometry is relatively simple. Post \ac{DPM} contrast enhanceme
 \section{X-ray harmonics on GEMINI PW}\label{sec:ch4-xray}
 Naturally, the first action is to repeat the ORION experiment at GEMINI PW. For this purpose, the Oxford Engineering Department is designing and building a replica OHREX spectrometer to resolve and measure the absolute intensity of X-ray harmonics with OHREX crystals on loan from ORION. The lower energy KAP (100) OHREX crystal listed in Table \ref{tab:dispersion} is more suited to GEMINI PW due to the lower energy of the beamline compared to ORION. Regardless, the quartz crystals will also be fielded. 
 
-A 1D PIC simulation of the GEMINI PW beamline for the planned geometry predicts harmonics will be resolved for the KAP energy range.
-[INSERT PIC SIMS HERE].
+A 1D PIC simulation of the GEMINI PW beamline for the planned geometry predicts harmonics will be resolved for the KAP energy range, detailed in Figure \ref{fig:geminixrayharmonics}.
+\begin{figure}
+	\centering
+	\includegraphics{figures/gemini/gemini_xray_harmonics}
+	\caption[XHHG on the GEMINI PW laser system.]{\textbf{1D PIC simulation of XHHG on the GEMINI PW laser system.} The beamline is incident on a SiO$_2$ target under optimised conditions. a) The full harmonic spectrum. b) Window of the spectrum recorded by the KAP OHREX crystal. The harmonics are clearly visible.}
+	\label{fig:geminixrayharmonics}
+\end{figure}
 
 A parameter scan of \ac{XHHG} as a function of $S$ can be performed by varying the laser intensity, via beam apodisation, and the target material. The majority of shots will use target wheels of the relatively high damage threshold fused silica with the plan to advance to a Kapton tape. The fused silica targets are chemically etched in one corner to aid alignment.
 % TODO cite the below
