--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -208,6 +208,7 @@
 \include{text/ch3-orion}
 \include{text/ch4-gemini}
 %\include{text/chx-misc}
+\include{text/ch5-summary}
 
 % TODO Add publications and contributions
 
