Proof read ch1 and ch2

--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -703,7 +703,7 @@ Bremsstrahlung emission from steep density profile low-Z solid density targets i
 
 The above discussion relied on the assumptions of equilibrium and a black-body radiation spectrum. While this is valid for the long radiating period after the interaction, in much of this thesis, emphasis has been placed on the non-equilibrium state of the interaction itself. There are two species of relevance during this time: the hot electrons around the front surface directly heated by the laser pulse and prepulse, and the hot electrons that are reflected specularly and are responsible for SHHG. In \cite{zulickHighResolutionBremsstrahlung2013}, bremsstrahlung of these species is measured experimentally for a 30 fs laser pulse and $a_0$ = 2.8. As the populations of each of these species are so small, the peak contribution to the photon spectrum is many orders of magnitude smaller than that of the experimental signal and can therefore be neglected.
 
-Applying hole boring theory, the measured intensity of the SP2 beamline implies an energy \qty{0.102 - 0.044 + 0.1733}{\mu J} per harmonic at 2.405 keV, corresponding to a total efficiency of \num{(2.04+3.47-0.86)e-10} into each harmonic at these photon energies. Applying these efficiencies and integrating over the spectrum \cite{gordienkoCoherentFocusingHigh2005}, at the new focal position the peak intensity is increased by a factor \num{1040+ 740 - 290}, corresponding to peak powers higher than any other light source globally at this time. Note that this dramatic magnification at focus is not unrealistic and is indeed consistent with the literature. Vincenti \textit{et al} demonstrated a 3 order of magnitude gain of 1000 for a 3 PW 20 fs system \cite{vincentiAchievingExtremeLight2019}. The longer duration of the pulse here leads to greater hole boring and therefore a correspondingly larger magnification factor. It is interesting that from Equation \ref{eq:orion-magnification}, for the ROM regime, the harmonics constitutes an unending series that is only terminated by the roll-off. Thus while simulations have demonstrated this gain of 1000 for a 3D simulation it is unlikely that it had the necessary resolution to resolve the full peak in intensity. Due to harmonic source size shrinkage and the roll-off, the efficiency of the SP1 beamline will be significantly lower and corresondingly the magnification also.
+% TODO fix this Applying hole boring theory, the measured intensity of the SP2 beamline implies an energy \qty{0.102 - 0.044 + 0.1733}{\mu J} per harmonic at 2.405 keV, corresponding to a total efficiency of \num{(2.04+3.47-0.86)e-10} into each harmonic at these photon energies. Applying these efficiencies and integrating over the spectrum \cite{gordienkoCoherentFocusingHigh2005}, at the new focal position the peak intensity is increased by a factor \num{1040+ 740 - 290}, corresponding to peak powers higher than any other light source globally at this time. Note that this dramatic magnification at focus is not unrealistic and is indeed consistent with the literature. Vincenti \textit{et al} demonstrated a 3 order of magnitude gain of 1000 for a 3 PW 20 fs system \cite{vincentiAchievingExtremeLight2019}. The longer duration of the pulse here leads to greater hole boring and therefore a correspondingly larger magnification factor. It is interesting that from Equation \ref{eq:orion-magnification}, for the ROM regime, the harmonics constitutes an unending series that is only terminated by the roll-off. Thus while simulations have demonstrated this gain of 1000 for a 3D simulation it is unlikely that it had the necessary resolution to resolve the full peak in intensity. Due to harmonic source size shrinkage and the roll-off, the efficiency of the SP1 beamline will be significantly lower and corresondingly the magnification also.
 
 
 Flying focus discussion here.
