--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -17,7 +17,7 @@ Here is presented one model for the interaction between a relativistic laser pul
 
 % TODO: At some point, I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply. Also, in the intro specify that for an overdense plasma, the laser does not propagate and must be reflected hence we are generally talking about a laser-plasma surface interaction and the implications thereof.) Before this point, I also want to discuss preplasmas.
 
-An explanation for the absorption of laser energy into dense plasmas was first suggested by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the so-called `post-ponderomotive' regime where the frequency of relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then sufficiently rapid to compensate for the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, this condition suggests a criterion for the \ac{ZVP} regime, $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser will typically compress the front surface to densities such that the overdensity condition is satisfied, provided the target is of sufficient thickness. Note that neglecting the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Preplasma formation and scale length will be discussed in great detail in the later chapters. For now, assume the technology exists to control this phenomenon. 
+An explanation for the absorption of laser energy into dense plasmas was first suggested by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the so-called `post-ponderomotive' regime where the frequency of relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then sufficiently rapid to compensate for the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, this condition suggests a criterion for the \ac{ZVP} regime, $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser will typically compress the front surface to densities such that the overdensity condition is satisfied, provided the target is of sufficient thickness. Note that neglecting the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Preplasma formation and scale length will be discussed in great detail in the later chapters. For now, assume the technology exists to sufficiently control this phenomenon. 
 
 Provided all conditions are met, the ponderomotive pressure of the laser pulse compresses electrons at the front surface of the plasma and so shifts the laser-plasma surface interaction to plasma densities well beyond the relativistic critical density, leaving in its wake a positive space charge of ions. This electron-ion charge separation leads to the formation of a \textit{pseudo-capacitor} electrostatic field. Having entered a regime of adiabaticity, the plasma skin layer is confined within a potential well consisting of the ponderomotive pressure of the laser pulse and the Coulomb potential of the pseudocapacitor field. Thus is formed a high-density and longitudinally thin electron bunch (sometimes referred to as an electron sheath in the literature \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}) at the plasma surface.
 
